# VoltZ

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  PROJECT_STATUS.md  README.md  REORGANIZATION_SUMMARY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/voltforge-mvp/: design.md  requirements.md  tasks.md
backend/: .gitkeep  Dockerfile  IMPLEMENTATION_SUMMARY.md  TASK_3_IMPLEMENTATION_SUMMARY.md  TASK_5_IMPLEMENTATION_SUMMARY.md
backend/examples/: vector_db_demo.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  jobs.py  projects.py
backend/src/middleware/: __init__.py  rate_limiting.py  security.py
backend/src/models/: __init__.py  core.py  validators.py
backend/src/services/: __init__.py  datasheet_ingestion.py  embeddings.py  planner.py  vector_db.py
backend/tests/: __init__.py  test_api_contracts.py  test_datasheet_ingestion.py  test_embeddings.py  test_models.py  test_planner.py  test_validators.py  test_vector_db.py  test_vector_db_integration.py
docs/: README.md  SUMMARY.md  api.md  architecture.md  contributing.md  deployment.md  development.md  testing.md
frontend/: .gitkeep
infra/: .gitkeep  nginx.conf
scripts/: .gitkeep  dev-start.bat  dev-start.sh
